# rust-learn

./: Cargo.toml  config.toml  dist-workspace.toml
crates/demo_lib/: Cargo.toml
crates/demo_lib/src/: lib.rs
crates/main_app/: Cargo.toml
crates/main_app/src/: main.rs
crates/main_app/wix/: main.wxs
src/: main.rs
